Bug 159903 - Paragraph style indent settings not working correctly
Summary: Paragraph style indent settings not working correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.3.1 rc
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: odf target:24.8.0 target:24.2.3.2 tar...
Keywords:
Depends on:
Blocks: Paragraph
  Show dependency treegraph
 
Reported: 2024-02-26 11:27 UTC by Matthew Kogan
Modified: 2024-05-13 15:44 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Broken indent demo.odt (9.74 KB, application/vnd.oasis.opendocument.text)
2024-02-26 11:28 UTC, Matthew Kogan
Details
Comparison of screenshots in LibO 4.0.0 and LibO 7.6 (104.73 KB, application/vnd.oasis.opendocument.graphics)
2024-02-27 15:06 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Kogan 2024-02-26 11:27:39 UTC
Description:
Indent settings on a numbered paragraph style in a document last saved in a version earlier than 7.6.3 are not displaying correctly in 7.6.3 and later.

Steps to Reproduce:
Open the attached document.

Actual Results:
In 7.6.3 and later, the paragraph wraps incorrectly to the left margin of the page, underneath the paragraph number.

Expected Results:
The heading should wrap correctly so that the second line is aligned with the first, as it does in 7.6.2 and earlier.


Reproducible: Always


User Profile Reset: No

Additional Info:
I have identified the commit that caused it.
https://git.libreoffice.org/core/+/7cf5faec6fdbc27dd77d2d36fb2ff205322cba0d%5E%21
Comment 1 Matthew Kogan 2024-02-26 11:28:04 UTC
Created attachment 192785 [details]
Broken indent demo.odt
Comment 2 Rainer Bielefeld Retired 2024-02-27 15:06:31 UTC
Created attachment 192826 [details]
Comparison of screenshots in LibO 4.0.0 and LibO 7.6

REPRODUCIBLE with Installation of Version: 7.6.4.1 (X86_64) 
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: Locale: de-DE (de_DE); UI: de-DE; Theme: Automatic (Colibre)
Calc: CL threaded – Normal User Profile

As you can see in my screenshots indent information simply will be lost in current versions.

I do not know used unit "ch" in indent dimensions.
Comment 3 Matthew Kogan 2024-02-27 15:17:11 UTC
I don't know why it's showing as ch for you. For me, in 6.2.4, it shows as 4.00cm and -4.00cm.
Comment 4 Rainer Bielefeld Retired 2024-02-27 15:20:44 UTC
As I learned now indent unit might mean "characters". Assume that that unit (Asian layout?) is reason for problems.

Where the heck can I find preference "Enable char unit"?
Comment 5 Rainer Bielefeld Retired 2024-02-27 15:23:44 UTC
@Matthew:
Reason might be related to 'Bug 101895 - Paragraph dialog units shown as "ch" and "lines" when "Enable char unit" is enabled by default'?
Comment 6 Matthew Kogan 2024-02-27 15:26:52 UTC
Looks like there's an ApplyCharUnit property in Options, LibreOffice, Advanced, Expert Configuration.
Comment 7 Rainer Bielefeld Retired 2024-02-27 18:52:03 UTC
Did not find obvious DUP with query <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs159903&sharer_id=19321>

So NEW
Comment 8 Commit Notification 2024-04-19 08:49:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b2a6b98291cf8b7022951be19b915fe2a9e18e6

tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-04-19 16:12:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c7ae3bd96130eaa400d55a3ba9bf1e2fe6600de

tdf#156146 tdf#159903 sw: add unit tests

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Stahl 2024-04-19 16:41:41 UTC
fixed now
Comment 11 Commit Notification 2024-04-22 14:47:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0b816bade2395d532862e8f2bba6fd7ea0ce540f

tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

It will be available in 7.6.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-04-22 14:47:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3df05ad4ec73e160f8c29af94ab3a34ee403b90d

tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-04-22 15:51:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2545b0885bdd269b4937ed9ef4813ed5597d71cc

tdf#156146 tdf#159903 sw: add unit tests

It will be available in 7.6.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2024-04-22 15:51:10 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/bd3519a67250550e8b793ca11b1b620feb988dfe

tdf#156146 tdf#159903 sw: add unit tests

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-04-29 16:43:29 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-3":

https://git.libreoffice.org/core/commit/8c5b6aca5e3928dd89ecdd78ff0959bd6eccb6f1

tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2024-04-29 19:07:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-7":

https://git.libreoffice.org/core/commit/878f51b4ec313a45335585f6f88d3a2cd5631df1

tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.