tdf#159903 xmloff: ODF import: fix bug in margin compatibility override

The check for the property being set was wrong: the state in a parent
style may be DIRECT_VALUE but a derived style may have a list style set,
which effectively overrides the ParaLeftMargin and ParaFirstLineIndent.

Fix this so that the compatibility override only happens when required.

(regression from commit 7cf5faec6fdbc27dd77d2d36fb2ff205322cba0d)

Change-Id: I6c8ca493df946afcb48a63c01c132620bcd7b390
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166257
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>